[package]
name = "quad-snd"
version = "0.1.0"
authors = ["Fedor Logachev <not.fl3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dummy_snd = []

[target.'cfg(target_os = "android")'.dependencies]
audir-sles = "0.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
alsa-sys = "*"
libc = "*"
audrey = { version = "0.3", default-features = false, features = ["wav", "ogg_vorbis"] }
